# secret-santa-as-a-service

./: .gitignore  Cargo.toml  README.md  dump.rdb  test.sh
e2e/: happy.spec.js  package-lock.json  package.json
src/: check.rs  interface.rs  main.rs  start.rs  subscribe.rs
