[package]
name = "secret-santa"
version = "0.1.0"
authors = ["Loic Coenen <ijwtcymb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
rand = "0.7.2"

[dependencies.redis]
version = "*"
